<resources>
    <string name="app_name">Irina Painting</string>
    <string name="irina_painting">Irina Painting</string>
    <string name="art_is">Art is for everyone!</string>
    <string name="irina_is">Irina is a Romanian artist who creates amazing figurative paintings.</string>
    <string name="discover">Discover her fantastic world full of colors and joy by visiting Facebook page and Website.</string>
    <string name="website">www.irinapicteaza.ro</string>
    <string name="facebook">www.facebook.com/Irina.Picteaza/</string>
    <string name="facebook_logo">Facebook</string>
    <string name="website_logo">Website</string>
</resources>
