<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/alyndra"
    android:padding="@dimen/padding_16"
    tools:context="com.example.android.irinapainting.MainActivity">

    <TextView
        android:id="@+id/irina"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/textBackground"
        android:gravity="center"
        android:text="@string/irina_painting"
        android:textColor="@color/text"
        android:textSize="@dimen/title" />

    <TextView
        android:id="@+id/art"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginBottom="@dimen/margin_10"
        android:background="@color/textBackground"
        android:padding="@dimen/padding_4"
        android:text="@string/art_is"
        android:textColor="@color/text"
        android:textSize="@dimen/slogan" />

    <LinearLayout
        android:id="@+id/description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/art"
        android:background="@color/textBackground"
        android:orientation="vertical"
        android:padding="@dimen/padding_4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:text="@string/irina_is"
            android:textColor="@color/text"
            android:textSize="@dimen/description" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/discover"
            android:textColor="@color/text"
            android:textSize="@dimen/description" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="right"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@color/textBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/facebook_logo"
                android:src="@drawable/facebook" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/facebook"
                android:textColorLink="@color/link"
                android:textSize="@dimen/website" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/textBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/website_logo"
                android:src="@drawable/website" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:text="@string/website"
                android:textColorLink="@color/link"
                android:textSize="@dimen/website" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
